<resources>
    <string name="_continue">Continue</string>
    <string name="_import">Import</string>
    <string name="about">About</string>
    <string name="about_app_translation_summary">Translate this app</string>
    <string name="allow_unstable_updates">Allow unstable updates</string>
    <string name="allow_unstable_updates_summary">Receive notifications about unstable builds</string>
    <string name="anilist">AniList</string>
    <string name="appearance">Appearance</string>
    <string name="ask_for_dest_dir_every_time">Ask for the destination dir every time</string>
    <string name="background">Background</string>
    <string name="backup_information">You can create backup of your history and favourites and restore it</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="black_dark_theme">Black</string>
    <string name="black_dark_theme_summary">Uses less power on AMOLED screens</string>
    <string name="check_for_new_chapters">Check for new chapters</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="check_new_chapters_title">Check for new chapters and notify about it</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="clear_cookies_summary">Can help in case of some issues. All authorizations will be invalidated</string>
    <string name="clear_network_cache">Clear network cache</string>
    <string name="clear_pages_cache">Clear page cache</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_thumbs_cache">Clear thumbnails cache</string>
    <string name="clear_updates_feed">Clear updates feed</string>
    <string name="color_theme">Color scheme</string>
    <string name="computing_">Computing…</string>
    <string name="create_backup">Create data backup</string>
    <string name="crop_pages">Crop pages</string>
    <string name="data_and_privacy">Data and privacy</string>
    <string name="debug">Debug</string>
    <string name="default_mode">Default mode</string>
    <string name="default_page_save_dir">Default page save directory</string>
    <string name="default_tab">Default tab</string>
    <string name="default_webtoon_zoom_out">Default webtoon zoom out</string>
    <string name="delete_read_chapters">Delete read chapters</string>
    <string name="delete_read_chapters_auto">Delete read chapters automatically</string>
    <string name="delete_read_chapters_summary">Delete chapters you have already read from local storage to free up space</string>
    <string name="details">Details</string>
    <string name="detect_reader_mode">Autodetect reader mode</string>
    <string name="detect_reader_mode_summary">Automatically detect if manga is webtoon</string>
    <string name="disable_battery_optimization">Disable battery optimization</string>
    <string name="disable_battery_optimization_summary">Helps with background updates checks</string>
    <string name="disable_battery_optimization_summary_downloads">Might help with getting the download started if you have any issues with it</string>
    <string name="disable_connectivity_check">Disable connectivity check</string>
    <string name="disable_connectivity_check_summary">Skip the connectivity check in case you have issues with it (e.g. going offline mode even though the network is connected)</string>
    <string name="disable_nsfw_notifications">Disable NSFW notifications</string>
    <string name="disable_nsfw_notifications_summary">Do not show notifications about NSFW manga updates</string>
    <string name="dns_over_https">DNS over HTTPS</string>
    <string name="download_new_chapters">Download new chapters</string>
    <string name="download_over_cellular">Downloading over cellular network</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_settings_info">You can enable download slowdown for each manga source individually in the source settings if you are having problems with server-side blocking</string>
    <string name="enhanced_colors">32-bit color mode</string>
    <string name="enhanced_colors_summary">Reduces banding, but may impact performance</string>
    <string name="exclude_nsfw_from_history">Exclude NSFW manga from history</string>
    <string name="exclude_nsfw_from_history_summary">Manga marked as NSFW will never be added to the history and your progress will not be saved</string>
    <string name="exit_confirmation">Exit confirmation</string>
    <string name="exit_confirmation_summary">Press Back twice to exit the app</string>
    <string name="favourites_categories">Favourite categories</string>
    <string name="frequency_of_check">Frequency of check</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="grid_size">Grid size</string>
    <string name="history_shortcuts">Show recent manga shortcuts</string>
    <string name="history_shortcuts_summary">Make recent manga available by long pressing on application icon</string>
    <string name="ignore_ssl_errors">Ignore SSL errors</string>
    <string name="ignore_ssl_errors_summary">You can disable SSL certificates verification in case you face an SSL-related issues when accessing network resources. This may affect your security. Application restarting is required after changing this setting.</string>
    <string name="images_proxy_title">Images optimization proxy</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">"Do not turn the screen off while you're reading manga"</string>
    <string name="kitsu">Kitsu</string>
    <string name="language">Language</string>
    <string name="list_mode">List mode</string>
    <string name="loading_">Loading…</string>
    <string name="local_manga_directories">Local manga directories</string>
    <string name="main_screen_sections">Main screen sections</string>
    <string name="mal">MyAnimeList</string>
    <string name="manga_list">Manga list</string>
    <string name="manga_save_location">Downloads folder</string>
    <string name="mirror_switching">Choose mirror automatically</string>
    <string name="mirror_switching_summary">Automatically switch domains for manga sources on errors if mirrors are available</string>
    <string name="network">Network</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="only_using_wifi">Only on Wi-Fi</string>
    <string name="pages_animation">Page animation</string>
    <string name="pages_saving">Saving pages</string>
    <string name="periodic_backups">Periodic backups</string>
    <string name="pin_navigation_ui">Pin navigation UI</string>
    <string name="pin_navigation_ui_summary">Do not hide navigation bar and search view on scroll</string>
    <string name="preferred_download_format">Preferred download format</string>
    <string name="prefetch_content">Content preloading</string>
    <string name="preload_pages">Preload pages</string>
    <string name="protect_application">Protect the app</string>
    <string name="protect_application_summary">Ask for password when starting Kotatsu</string>
    <string name="proxy">Proxy</string>
    <string name="reader_actions">Reader actions</string>
    <string name="reader_actions_summary">Configure actions for tappable screen areas</string>
    <string name="reader_control_ltr">Ergonomic reader control</string>
    <string name="reader_control_ltr_summary">Do not adjust the page switching direction to the reader mode, e. g. pressing the right key always switches to the next page. This option affects only hardware input devices</string>
    <string name="reader_fullscreen_summary">Hide system status and navigation bars</string>
    <string name="reader_info_bar">Show information bar in reader</string>
    <string name="reader_info_bar_summary">Show the current time and reading progress at the top of the screen</string>
    <string name="reader_optimize">Reduce memory consumption (beta)</string>
    <string name="reader_optimize_summary">Reduce offscreen pages quality to use less memory</string>
    <string name="reader_settings">Reader settings</string>
    <string name="reader_slider">Show page switching slider</string>
    <string name="reader_zoom_buttons">Show zoom buttons</string>
    <string name="reader_zoom_buttons_summary">Whether to show zoom control buttons in the bottom right corner</string>
    <string name="reading_stats">Reading statistics</string>
    <string name="reading_time_estimation">Show estimated reading time</string>
    <string name="reading_time_estimation_summary">The time estimation value may be inaccurate</string>
    <string name="related_manga">Related manga</string>
    <string name="related_manga_summary">Show a list of related manga. In some cases it may be inaccurate or missing</string>
    <string name="remote_sources">Manga sources</string>
    <string name="restore_backup">Restore from backup</string>
    <string name="restore_summary">Restore previously created backup</string>
    <string name="runs_on_app_start">Runs when the application starts</string>
    <string name="scale_mode">Scale mode</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="screenshots_policy">Screenshot policy</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="services">Services</string>
    <string name="shikimori">Shikimori</string>
    <string name="show_labels_in_navbar">Show labels in navigation bar</string>
    <string name="show_pages_numbers">Numbered pages</string>
    <string name="show_pages_numbers_summary">Show page numbers in bottom corner</string>
    <string name="show_pages_thumbs">Show pages thumbnails</string>
    <string name="show_pages_thumbs_summary">Enable the \"Pages\" tab on the details screen</string>
    <string name="show_quick_filters">Show quick filters</string>
    <string name="show_quick_filters_summary">Provides the ability to filter manga lists by certain parameters</string>
    <string name="show_reading_indicators">Show reading progress indicators</string>
    <string name="source_code">Source code</string>
    <string name="storage_usage">Storage usage</string>
    <string name="suggestions">Suggestions</string>
    <string name="switch_pages_volume_buttons">Enable volume buttons</string>
    <string name="switch_pages_volume_buttons_summary">Use volume buttons for switching pages</string>
    <string name="sync">Synchronization</string>
    <string name="sync_settings">Synchronization settings</string>
    <string name="sync_title">Sync your data</string>
    <string name="telegram_group">Telegram group</string>
    <string name="theme">Theme</string>
    <string name="track_sources">Look for updates</string>
    <string name="tracker_debug_info">Checking for new chapters log</string>
    <string name="tracker_debug_info_summary">Debug information about background checks for new chapters</string>
    <string name="tracker_warning">Some devices have different system behavior, which may break background tasks.</string>
    <string name="tracker_wifi_only_summary">Do not check for new chapters using metered network connections</string>
    <string name="tracking">Tracking</string>
    <string name="url_github">https://github.com/KotatsuApp/Kotatsu</string>
    <string name="url_telegram_web">https://t.me/kotatsuapp</string>
    <string name="url_user_manual">https://kotatsu.app/manuals/guides/getting-started/</string>
    <string name="url_weblate">https://hosted.weblate.org/engage/kotatsu</string>
    <string name="user_manual">User manual</string>
    <string name="webtoon_gaps">Gaps in webtoon mode</string>
    <string name="webtoon_gaps_summary">Show vertical gaps between pages in webtoon mode</string>
    <string name="webtoon_zoom">Webtoon zoom</string>
    <string name="webtoon_zoom_summary">Allow zoom in gesture in webtoon mode</string>
</resources>