<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/data_and_privacy"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat android:persistent="false" android:title="@string/protect_application" android:key="protect_app" android:summary="@string/protect_application_summary" />
    <ListPreference android:entries="@array/screenshots_policy" android:title="@string/screenshots_policy" android:key="screenshots_policy" android:defaultValue="allow" app:useSimpleSummaryProvider="true" />
    <SwitchPreferenceCompat android:title="@string/exclude_nsfw_from_history" android:key="history_exclude_nsfw" android:summary="@string/exclude_nsfw_from_history_summary" />
    <SwitchPreferenceCompat android:title="@string/history_shortcuts" android:key="dynamic_shortcuts" android:summary="@string/history_shortcuts_summary" android:defaultValue="true" />
    <MultiSelectListPreference android:title="@string/search_suggestions" android:key="search_suggest_types" />
    <PreferenceCategory android:title="@string/backup_restore">
        <Preference android:persistent="false" android:title="@string/create_backup" android:key="backup" android:summary="@string/backup_information" />
        <Preference android:persistent="false" android:title="@string/restore_backup" android:key="restore" android:summary="@string/restore_summary" />
        <Preference android:persistent="false" android:title="@string/periodic_backups" android:key="backup_periodic" android:fragment="org.koitharu.kotatsu.settings.backup.PeriodicalBackupSettingsFragment" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/storage_usage">
        <org.koitharu.kotatsu.settings.userdata.StorageUsagePreference android:key="storage_usage" />
        <Preference android:persistent="false" android:title="@string/clear_search_history" android:key="search_history_clear" android:summary="@string/loading_" app:allowDividerAbove="true" />
        <Preference android:persistent="false" android:title="@string/clear_updates_feed" android:key="updates_feed_clear" android:summary="@string/loading_" />
        <Preference android:persistent="false" android:title="@string/clear_thumbs_cache" android:key="thumbs_cache_clear" android:summary="@string/computing_" />
        <Preference android:persistent="false" android:title="@string/clear_pages_cache" android:key="pages_cache_clear" android:summary="@string/computing_" />
        <Preference android:persistent="false" android:title="@string/clear_network_cache" android:key="http_cache_clear" android:summary="@string/loading_" />
        <Preference android:persistent="false" android:title="@string/clear_cookies" android:key="cookies_clear" android:summary="@string/clear_cookies_summary" />
        <Preference android:persistent="false" android:title="@string/delete_read_chapters" android:key="chapters_clear" android:summary="@string/delete_read_chapters_summary" />
        <SwitchPreferenceCompat android:title="@string/delete_read_chapters_auto" android:key="chapters_clear_auto" android:summary="@string/runs_on_app_start" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>