<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:icon="@drawable/ic_appearance" android:title="@string/appearance" android:key="appearance" android:fragment="org.koitharu.kotatsu.settings.AppearanceSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_manga_source" android:title="@string/remote_sources" android:key="remote_sources" android:fragment="org.koitharu.kotatsu.settings.sources.SourcesSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_book_page" android:title="@string/reader_settings" android:key="reader" android:fragment="org.koitharu.kotatsu.settings.ReaderSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_web" android:title="@string/network" android:key="network" android:fragment="org.koitharu.kotatsu.settings.NetworkSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_data_privacy" android:title="@string/data_and_privacy" android:key="userdata" android:fragment="org.koitharu.kotatsu.settings.userdata.UserDataSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_download" android:title="@string/downloads" android:key="downloads" android:fragment="org.koitharu.kotatsu.settings.DownloadsSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_feed" android:title="@string/check_for_new_chapters" android:key="tracker" android:fragment="org.koitharu.kotatsu.settings.tracker.TrackerSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_services" android:title="@string/services" android:key="services" android:fragment="org.koitharu.kotatsu.settings.ServicesSettingsFragment" />
    <PreferenceScreen android:icon="@drawable/ic_info_outline" android:title="@string/about" android:key="about" android:fragment="org.koitharu.kotatsu.settings.about.AboutSettingsFragment" />
</PreferenceScreen>